kube/gcp/web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: chunkmydocs
  labels:
    app.kubernetes.io/name: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web
  template:
    metadata:
      namespace: chunkmydocs
      labels:
        app.kubernetes.io/name: web
    spec:
      containers:
      - name: web
        image: luminainc/web:d0361967
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
